[package]
name = "superdev-quiz1"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
solana-sdk = "2.3.1"
solana-client = "2.3.2"
solana-system-interface = "1.0.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
ed25519-dalek = "2.0"
base58 = "0.2"
base64 = "0.22.1"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4"] }
